Fix SSH keys page layout issues

--- a/site/modules/account/static/css/main.css
+++ b/site/modules/account/static/css/main.css
@@ -32,3 +32,7 @@ input.error, select.error, textarea.error {
     text-decoration: none;
     border: none;
 }
+
+.ssh .new-key-button {
+    margin-top: 20px;
+}
